start adding standardizing effort

--- a/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
+++ b/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "[6965 rows x 4 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "30573"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "9963"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "13769"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,14 +726,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There's 419 identifiers in h2 are not present in h3:\n"
+      "There's 419 identifiers in h2 are not present in h3.\n"
      ]
     }
    ],
@@ -761,6 +761,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''ONLY RUN THIS WHEN NEED TO COLLECT LOOKUP INFORMATION!!!\n",
     "# This first cell sets things up for querying UniProt; THIS COMES FROM https://nbviewer.org/github/fomightez/humap3-binder/blob/main/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap3-provided_csv.ipynb\n",
     "from unipressed import UniprotkbClient\n",
     "import time\n",
@@ -863,7 +864,8 @@
     "            combined_dict.update(chunk_dict)\n",
     "        print(f\"Loaded {pickle_file}, combined dictionary now has {len(combined_dict)} entries\")\n",
     "    \n",
-    "    return combined_dict"
+    "    return combined_dict\n",
+    "''';"
    ]
   },
   {
@@ -883,7 +885,9 @@
     }
    ],
    "source": [
-    "process_all_ids_in_chunks(list(missing_in_h3), chunk_size=500)"
+    "'''ONLY RUN THIS WHEN NEED TO COLLECT LOOKUP INFORMATION!!!\n",
+    "process_all_ids_in_chunks(list(missing_in_h3), chunk_size=500)\n",
+    "''';"
    ]
   },
   {
@@ -907,7 +911,9 @@
     }
    ],
    "source": [
-    "missing_lookup_dict = combine_pickle_chunks()"
+    "'''ONLY RUN THIS WHEN NEED TO COLLECT LOOKUP INFORMATION!!!\n",
+    "missing_lookup_dict = combine_pickle_chunks()\n",
+    "''';"
    ]
   },
   {
@@ -923,8 +929,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''ONLY RUN THIS WHEN NEED TO COLLECT LOOKUP INFORMATION!!!\n",
     "merged_lookup_dict = h3_lookup_dict.copy()\n",
-    "merged_lookup_dict.update(missing_lookup_dict)"
+    "merged_lookup_dict.update(missing_lookup_dict)\n",
+    "''';"
    ]
   },
   {
@@ -944,7 +952,9 @@
     }
    ],
    "source": [
-    "len(list(merged_lookup_dict.keys()))"
+    "''''''ONLY RUN THIS WHEN NEED TO COLLECT LOOKUP INFORMATION!!!\n",
+    "len(list(merged_lookup_dict.keys()))\n",
+    "''';"
    ]
   },
   {
@@ -960,9 +970,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''ONLY RUN THIS WHEN NEED TO COLLECT LOOKUP INFORMATION!!!\n",
     "import pickle\n",
     "with open(\"look_up_dict_for_h2nh3_all_14188_Uniprot_ACCs.pkl\", \"wb\") as f:\n",
-    "        pickle.dump(merged_lookup_dict, f)"
+    "        pickle.dump(merged_lookup_dict, f)\n",
+    "''';"
    ]
   },
   {
@@ -998,6 +1010,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Now use lookup table to fix and balance the two columns, `'Uniprot_ACCs'` & `'genenames'`\n",
+    "\n",
+    "This is a step towards making a better CSV that adheres close to the author-provided one but follows better data management practices to make it easier to use Pandas `explode()` the way I had been when I though the two columns were in-order matched and I had not realized the extent of special cases buried in the data.\n",
+    "\n",
+    "Also will do some accounting along the way so I can have more numbers to relate what was going on in original CSV. One aspect of this will be to assess how many special cases there are and make it easy to find them more easily."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14188"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "with open(\"look_up_dict_for_h2nh3_all_14188_Uniprot_ACCs.pkl\", \"rb\") as f:\n",
+    "        merged_lookup_dict = pickle.load(f)\n",
+    "len(list(merged_lookup_dict.keys()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Found **later** needed some additional ones added that have gene names in the `genename` column but no corresponding identifier in the `Uniprot_ACCs` column , like so:\n",
     "\n",
     "```text\n",
@@ -1009,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,39 +1261,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now use lookup table to fix and balance the two columns, `'Uniprot_ACCs'` & `'genenames'`\n",
-    "\n",
-    "This is a step towards making a better CSV that adheres close to the author-provided one but follows better data management practices to make it easier to use Pandas `explode()` the way I had been when I though the two columns were in-order matched and I had not realized the extent of special cases buried in the data.\n",
-    "\n",
-    "Also will do some accounting along the way so I can have more numbers to relate what was going on in original CSV. One aspect of this will be to assess how many special cases there are and make it easy to find them more easily."
+    "Now ready to get started fixing!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14188"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pickle\n",
-    "with open(\"look_up_dict_for_h2nh3_all_14188_Uniprot_ACCs.pkl\", \"rb\") as f:\n",
-    "        merged_lookup_dict = pickle.load(f)\n",
-    "len(list(merged_lookup_dict.keys()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1831,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1993,7 @@
        "4                          False                            NOTHING  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
