update the standardizing journey

--- a/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
+++ b/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
@@ -49,7 +49,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  500k  100  500k    0     0   435k      0  0:00:01  0:00:01 --:--:--  436k\n"
+      "100  500k  100  500k    0     0  1472k      0 --:--:-- --:--:-- --:--:-- 1475k\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  1007  100  1007    0     0    130      0  0:00:07  0:00:07 --:--:--   287\n"
+      "100  1007  100  1007    0     0   3882      0 --:--:-- --:--:-- --:--:--  3888\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
      "output_type": "stream",
      "text": [
       "Reading inline script metadata from `\u001b[36mcomplexes_rawCSV_to_df.py\u001b[39m`\n",
-      "\u001b[2K\u001b[37m⠙\u001b[0m \u001b[2m                                                                              \u001b[0m"
+      "\u001b[2K\u001b[2mInstalled \u001b[1m10 packages\u001b[0m \u001b[2min 199ms\u001b[0m\u001b[0m                              \u001b[0m         \n"
      ]
     },
     {
@@ -260,7 +260,7 @@
        "[6965 rows x 4 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "30573"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "9963"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,21 +702,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100  233k  100  233k    0     0   589k      0 --:--:-- --:--:-- --:--:--  589k\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "13769"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "lu_file_needed = \"look_up_dict_all_13769_Uniprot_ACCs.pkl\"\n",
+    "import os\n",
+    "if not os.path.isfile(lu_file_needed):\n",
+    "    !curl -OL \"https://github.com/fomightez/humap3-binder/raw/refs/heads/main/additional_nbs/standardizing_initial_data/{lu_file_needed}\"\n",
+    "import time\n",
+    "time.sleep(1.0)\n",
     "import pickle\n",
     "with open(\"look_up_dict_all_13769_Uniprot_ACCs.pkl\", \"rb\") as f:\n",
     "        h3_lookup_dict = pickle.load(f)\n",
@@ -732,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1039,7 @@
        "14188"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,12 +1061,14 @@
     "HuMAP2_06154,4,  Q86YV6 Q9H7B4   Q9H9G7,HSP90AA5P HSP90AB2P MYLK4 SMYD3 HSP90AB3P HSP90AB4P AGO3\n",
     "HuMAP2_00547,5, P58876 P16104 P23527 Q96T23 Q6ZRQ5 Q8IUE6,H3-2 HIST1H2BD H2AFX HIST1H2BO RSF1 MMS22L HIST2H2AB\n",
     "HuMAP2_01550,4,Q8NB90  Q9BW66 Q9BVQ7 Q9NX04,SPATA5 RIPK4 CINP SPATA5L1 C1orf109\n",
-    "```"
+    "```\n",
+    "\n",
+    "Next cell handles the several cases of that:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1846,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1907,7 @@
        "      <td>3</td>\n",
        "      <td>Q9BQS8 O95900</td>\n",
        "      <td>FYCO1 TRUB2</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -1968,7 +1986,7 @@
        "4                 Q8WV99 Q9NQT8 Q9H672 P20774 Q49A92   \n",
        "\n",
        "                                           genenames  matching_originally  \\\n",
-       "0                                        FYCO1 TRUB2                 True   \n",
+       "0                                        FYCO1 TRUB2                False   \n",
        "1            ANXA6 SMAD1 TBCB EHD1 PAFAH1B2 PAFAH1B3                False   \n",
        "2  RBPMS GDE1 PLEKHB1 DAZAP2 RBPMS2 FAM168B RBFOX...                False   \n",
        "3  VAMP3 SYPL1 MICA SLC20A1 PPP1R12A FLVCR1 DRAP1...                False   \n",
@@ -1989,7 +2007,7 @@
        "4                          False                            NOTHING  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2004,12 +2022,12 @@
    "source": [
     "**Initially running the above two steps with the code I worked out with the hu.MAP 3.0 data revealed some additional special cases lurking in the hu.MAP 2.0 data that I had to deal with:**\n",
     "(See the special handling code in the cell that two cells up for a full list; you'll need to compare that to the special handling section in  [the notebook 'Jupyter Notebook Standardizing Identifier Order In Adjacent Columns in hu.MAP2-provided CSV'](https://nbviewer.org/github/fomightez/humap3-binder/blob/main/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap3-provided_csv.ipynb) to fully see the many of them but they fall into two categories so far: **more synonym names used** and **cases where genename is used for what is no longer in UniProt**.)  \n",
-    "For dealing with the synonym names I had to add some special handling beyond that I had for the hu.MAP 3.0 data. To do that, I donwload an intermediate, `DRAFThumap2_complexes_20200809InOrderMatched.csv` that still had a lot (863 according to 'Find') of cases of `SPECIAL_unaccounted_gene` and I ran the following code to generate many more entries in the last section of special handling for accounting for what is missing in Uniprot_ACCs column, corresponding to `# makes it match what author provided file had for that one; they used its synonym`:\n",
-    "The authors also had some like, `CYHR1` and `AMY1A`, that I found when developing automating making code dealing with synonyms handling. (These ones turned out to be revealed when coming across thos without `'genes' in uniprot_record`.) These had been removed from UniProt and so no gene name even though the authors used one, and so I added special handling for the UniProt accessions for those, too.\n",
+    "For dealing with the synonym names I had to add some special handling beyond that I had for the hu.MAP 3.0 data. To do that, I donwloaded an intermediate draft result, `DRAFThumap2_complexes_20200809InOrderMatched.csv`, that still had a lot (863 according to 'Find') of cases of `SPECIAL_unaccounted_gene` and I ran the following code to generate many more entries in the last section of special handling for accounting for what is missing in Uniprot_ACCs column, corresponding to `# makes it match what author provided file had for that one; they used its synonym`:\n",
+    "The authors also had some like, `CYHR1` and `AMY1A`, that I found when developing automating making code dealing with synonyms handling. (These ones turned out to be revealed when coming across those without `'genes' in uniprot_record`.) A good percentage of these had been removed from UniProt and so no gene name even though the authors used one, and so I added special handling for the UniProt accessions for those, too. Plus, some of these involving gaps in the `Uniprot_ACCs` column seemed to just be where something got deleted as a large percent where pseudogenes but the genename remained.\n",
     "I added handling to the cell above to deal with many of these now, and so..... hopefully\n",
     "\n",
     "...eliminated all those, so at this point `genenames_had_unaccounted_for` and\t`what_genenames_had_unaccounted_for` are moot and can be removed from the tracker data.  \n",
-    "Let's verify that here and then remove those two tracking columns."
+    "Let's verify that here and then remove those two tracking columns. ??????"
    ]
   },
   {
@@ -2208,6 +2226,37 @@
     "tracker_results_df = tracker_results_df.drop(columns=['genenames_had_unaccounted_for', 'what_genenames_had_unaccounted_for'])\n",
     "tracker_results_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NEXT add in:\n",
+    "- checking for duplicates by using `%run .ipynb` to run the notebook I made."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2637,7 +2686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2646,18 +2695,6 @@
      "text": [
       ".\n",
       ".\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m480\u001b[39m) \u001b[38;5;66;03m#60 seconds times 8 minutes\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m---> 10\u001b[0m     \u001b[43mexecuteSomething\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[24], line 7\u001b[0m, in \u001b[0;36mexecuteSomething\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mexecuteSomething\u001b[39m():\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;66;03m#code here\u001b[39;00m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m480\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
