update the standardizing journey

--- a/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
+++ b/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1857,14 +1857,14 @@
     "tracker_results_df['matching_originally'] = [d['matching_originally'] for d in tracker.tracking_list] \n",
     "tracker_results_df['balanced_originally'] = [d['balanced_originally'] for d in tracker.tracking_list] \n",
     "tracker_results_df['involves_semicolon'] = [d['involves_semicolon'] for d in tracker.tracking_list]\n",
-    "tracker_results_df['SPECIAL_involved'] = [d['involves_semicolon'] for d in tracker.tracking_list]\n",
+    "tracker_results_df['SPECIAL_involved'] = [d['SPECIAL_involved'] for d in tracker.tracking_list]\n",
     "tracker_results_df['genenames_had_unaccounted_for'] = [d['genenames_had_unaccounted_for'] for d in tracker.tracking_list]\n",
     "tracker_results_df['what_genenames_had_unaccounted_for'] = [d['what_genenames_had_unaccounted_for'] for d in tracker.tracking_list]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +2007,7 @@
        "4                          False                            NOTHING  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2064,12 +2064,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>False</td>\n",
-       "      <td>6735</td>\n",
+       "      <td>6736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>True</td>\n",
-       "      <td>230</td>\n",
+       "      <td>229</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2077,11 +2077,11 @@
       ],
       "text/plain": [
        "   genenames_had_unaccounted_for  count\n",
-       "0                          False   6735\n",
-       "1                           True    230"
+       "0                          False   6736\n",
+       "1                           True    229"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2093,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2134,7 @@
        "      <td>3</td>\n",
        "      <td>Q9BQS8 O95900</td>\n",
        "      <td>FYCO1 TRUB2</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -2203,7 +2203,7 @@
        "4                 Q8WV99 Q9NQT8 Q9H672 P20774 Q49A92   \n",
        "\n",
        "                                           genenames  matching_originally  \\\n",
-       "0                                        FYCO1 TRUB2                 True   \n",
+       "0                                        FYCO1 TRUB2                False   \n",
        "1            ANXA6 SMAD1 TBCB EHD1 PAFAH1B2 PAFAH1B3                False   \n",
        "2  RBPMS GDE1 PLEKHB1 DAZAP2 RBPMS2 FAM168B RBFOX...                False   \n",
        "3  VAMP3 SYPL1 MICA SLC20A1 PPP1R12A FLVCR1 DRAP1...                False   \n",
@@ -2217,7 +2217,7 @@
        "4                 True               False             False  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2513,7 @@
        "1                True     86"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2540,7 +2540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2572,12 +2572,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>False</td>\n",
-       "      <td>6879</td>\n",
+       "      <td>6901</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>True</td>\n",
-       "      <td>86</td>\n",
+       "      <td>64</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2585,11 +2585,11 @@
       ],
       "text/plain": [
        "   SPECIAL_involved  count\n",
-       "0             False   6879\n",
-       "1              True     86"
+       "0             False   6901\n",
+       "1              True     64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2600,15 +2600,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Why same number as semi-colon check?? Does that make sense? Just chance?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2640,12 +2633,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>False</td>\n",
-       "      <td>0.987653</td>\n",
+       "      <td>0.990811</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.012347</td>\n",
+       "      <td>0.009189</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2653,11 +2646,11 @@
       ],
       "text/plain": [
        "   SPECIAL_involved  proportion\n",
-       "0             False    0.987653\n",
-       "1              True    0.012347"
+       "0             False    0.990811\n",
+       "1              True    0.009189"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2671,7 +2664,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So there's a fairly small fraction, just abit above 1%, that are 'special' cases in there now.  \n",
+    "So there's quite a small fraction, below above 1%, that are 'special' cases in there now.  \n",
     "And even if these are special there is matching information in both colunns in my 'fixed' CSV to keep things explodable and utimately tidy.\n",
     "\n",
     "**Use ` humap2_complexes_20200809InOrderMatched.csv` saved above the 'accounting' I just did.**"
@@ -2693,7 +2686,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".\n",
       ".\n"
      ]
     }
