update the standardizing journey

--- a/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
+++ b/additional_nbs/standardizing_initial_data/Standardizing_identifier_order_in_humap2-provided_csv.ipynb
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,8 +1403,12 @@
     "            parts = what_remains.split()\n",
     "            first_part_matched_genename = matched_genename.split(';')[0]\n",
     "            if first_part_matched_genename in parts:\n",
-    "                parts.remove(first_part_matched_genename)\n",
+    "                #parts.remove(first_part_matched_genename) # HOWEVER for 27 cases seemed there was a duplication and \n",
+    "                # so the `parts.remove()` only removed the first instance.Changing\n",
+    "                # to list comprehension on next line made sure all matches removed\n",
+    "                parts = [x for x in parts if x != first_part_matched_genename]\n",
     "                what_remains = ' '.join(parts)\n",
+    "                \n",
     "        elif original_ACC in ['O15482','P23610','P62805','P68431','Q71DI3','P62807','P62807','P0C0S8','Q6ZMK1','P04745','P0DN76','A6NLF2','B9ZVM9','Q9Y4X1','Q12799','Q5VWM5','P0DN79','P0DN76']:\n",
     "            # handle some special cases where there's semi-colons (plus a few additional cpecial cases) so default below won't work and so few that it isn't worth working out programmatically\n",
     "            # SET UP TO Handle several special cases I noted, so proper text gets removed and don't add extra SPECIAL case to result CSV:\n",
@@ -1781,12 +1785,10 @@
     "    # that gets added will need a 'SPECIAL_'-branded id placeholder added to the\n",
     "    # new_Uniprot_ACCs_list so that things remain balanced\n",
     "    if what_remains.strip():\n",
-    "        genenames_had_unaccounted_for = True # set this for accounting\n",
-    "        what_genenames_had_unaccounted_for = what_remains.strip() # set this for accounting\n",
-    "        # now iterate on what splitting that string at the spaces returns and \n",
+    "        unaccounted_genenames_list = what_remains.strip().split() #now iterate on what splitting that string at the spaces returns and \n",
     "        # do special handling or if not in what needs special handling then\n",
-    "        # add a corresponding 'SPECIAL_'-labeled entry placeholder \n",
-    "        unaccounted_genenames_list = what_genenames_had_unaccounted_for.split()\n",
+    "        # add a corresponding 'SPECIAL_'-labeled entry placeholder for those\n",
+    "        # not accounted for by special \n",
     "        for unaccounted_genename in unaccounted_genenames_list:\n",
     "            if unaccounted_genename in special_genename_lookup_dict:\n",
     "                new_Uniprot_ACCs_list.append(special_genename_lookup_dict[unaccounted_genename]) \n",
@@ -1794,6 +1796,11 @@
     "            else:\n",
     "                new_Uniprot_ACCs_list.append('SPECIAL_unaccounted_gene') # NOTE, I used iterating on running this function & finding this occurence in the data to progressively add handling two types of 'special cases' (one type being those with threee or more semi-colons and the other being where the author-provided file use a synonyms) and ultimately end up with NO instances of `SPECIAL_unaccounted_gene` being necessary in my fixed in-order matched, balanced verison of the data.\n",
     "                new_genenames_list.append(unaccounted_genename)\n",
+    "                genenames_had_unaccounted_for = True # set this for accounting\n",
+    "                if  what_genenames_had_unaccounted_for == \"Nothing\": # set up to build from split, because some may get handled by special treatment here\n",
+    "                    what_genenames_had_unaccounted_for = unaccounted_genename + \" \"\n",
+    "                else:\n",
+    "                    what_genenames_had_unaccounted_for += unaccounted_genename + \" \"\n",
     "    assert (len(new_Uniprot_ACCs_list) == len(new_genenames_list)) #sanity \n",
     "    # check; they definitely should balance still\n",
     "    new_Uniprot_ACCs_string = \" \".join(new_Uniprot_ACCs_list)\n",
@@ -1838,7 +1845,7 @@
     "                            'involves_semicolon': involves_semicolon,\n",
     "                            'SPECIAL_involved': SPECIAL_involved,\n",
     "                            'genenames_had_unaccounted_for': genenames_had_unaccounted_for,\n",
-    "                            'what_genenames_had_unaccounted_for': what_genenames_had_unaccounted_for\n",
+    "                            'what_genenames_had_unaccounted_for': what_genenames_had_unaccounted_for.strip()\n",
     "                            })  # Append to the class attribute list a dictionary\n",
     "    return row\n",
     "\n",
@@ -1864,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +2014,7 @@
        "4                          False                            NOTHING  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2039,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unacc_df = tracker_results_df.copy()\n",
+    "unacc_df = unacc_df[unacc_df.Uniprot_ACCs.str.contains('SPECIAL_unaccounted_gene')]\n",
+    "len(unacc_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2064,12 +2093,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>False</td>\n",
-       "      <td>6736</td>\n",
+       "      <td>6938</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>True</td>\n",
-       "      <td>229</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2077,11 +2106,11 @@
       ],
       "text/plain": [
        "   genenames_had_unaccounted_for  count\n",
-       "0                          False   6736\n",
-       "1                           True    229"
+       "0                          False   6938\n",
+       "1                           True     27"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2267,7 +2296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2299,12 +2328,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>False</td>\n",
-       "      <td>5651</td>\n",
+       "      <td>5674</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>True</td>\n",
-       "      <td>1314</td>\n",
+       "      <td>1291</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2312,11 +2341,11 @@
       ],
       "text/plain": [
        "   matching_originally  count\n",
-       "0                False   5651\n",
-       "1                 True   1314"
+       "0                False   5674\n",
+       "1                 True   1291"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2328,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2360,12 +2389,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>False</td>\n",
-       "      <td>0.811342</td>\n",
+       "      <td>0.814645</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.188658</td>\n",
+       "      <td>0.185355</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2373,11 +2402,11 @@
       ],
       "text/plain": [
        "   matching_originally  proportion\n",
-       "0                False    0.811342\n",
-       "1                 True    0.188658"
+       "0                False    0.814645\n",
+       "1                 True    0.185355"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2396,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2445,7 +2474,7 @@
        "1                False    234"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2464,7 +2493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2542,7 @@
        "1                True     86"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2540,7 +2569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2618,7 @@
        "1              True     64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2601,7 +2630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2650,7 +2679,7 @@
        "1              True    0.009189"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
